--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *{
@@ -7,7 +8,7 @@
     box-sizing: border-box;
     font-family:'Lato', sans-serif;
 }
-body, html
+main
 {
  color: #333;
  display: grid;
@@ -15,19 +16,22 @@ body, html
  place-items: center;
 }
 
-h1  {
+#titreMail  {
+    text-align:center;
     margin: 0;
     padding:20px;
     color: #00bfff;
     font-size: 2.5em;
     font-weight: 600;
-    margin-top: 5rem;
+    margin-top: 10px;
 }
 
-p {
+#titreDemande {
+    text-align: center;
     margin: 0;
     padding:10px;
     margin-top: 10px;
+    font-size:medium;
 }
 
 form{
@@ -52,5 +56,35 @@ input[type=text], input[type="email"], textarea {
 }
 
 input[type="submit"]:hover, button:hover {
+   
     background : #00bfff;
+    
 }
+
+
+
+ 
+body{
+    padding-bottom:350px;
+    padding-top:70px;
+     background-color:#ebeef2;  
+    }
+
+    #carouselCol{
+    margin-top: 29px;
+    }
+    
+
+
+    p:first-letter {
+      float: left;
+      font-size: 45px;
+      line-height: 1;
+      font-weight: bold;
+      margin-right: 9px;
+      color: #8fcdf6;
+      font-family: "Times New Roman", Times, serif;
+      text-shadow: #690 .05em .05em;
+    }
+
+
